# fusionner

./: .gitmodules  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
fusionner/: RepositoryConfiguration.t.html  WatchReferences.t.html  index.html  sidebar-items.js  struct.Password.html  struct.RepositoryConfiguration.html  struct.WatchReferences.html
fusionner/git/: RefspecStr.t.html  index.html  sidebar-items.js  struct.RefspecStr.html  struct.Remote.html  struct.RemoteHead.html  struct.Repository.html
fusionner/merger/: MergeReferenceNamer.t.html  MergeReferenceNamerCallback.t.html  Merges.t.html  ShouldMergeResult.t.html  enum.MergeReferenceNamer.html  enum.ShouldMergeResult.html  index.html  sidebar-items.js  struct.Merge.html  struct.Merger.html  struct.Note.html  type.MergeReferenceNamerCallback.html  type.Merges.html
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/ops/: trait.Deref.js
implementors/core/str/: trait.FromStr.js
src/: git.rs  lib.rs  main.rs  merger.rs  test.rs  utils.rs
src/fusionner/: git.rs.html  lib.rs.html  merger.rs.html  utils.rs.html
tests/fixtures/: config.toml
