[package]
name = "fusionner"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
license = "Apache-2.0"

[[bin]]
name = "fusionner"
path = "src/main.rs"
test = true
doc = false

[lib]
name = "fusionner"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
docopt = "0.7.0"
env_logger = "0.4.0"
git2 = { path = "git2-rs", version = "0.6" }
libgit2-sys = { path = "git2-rs/libgit2-sys", version = "0.6.6" }
log = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
toml = "0.2"
