[package]
name = "fusionner"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
license = "Apache-2.0"

[[bin]]
name = "fusionner"
path = "src/main.rs"
test = true
doc = false

[lib]
name = "fusionner"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
docopt = "0.7.0"
fern = "0.3"
git2 = { git = "https://github.com/alexcrichton/git2-rs.git", rev = "0d745cf0efad95a9e407beecd7b508ca9a37df80" }
libgit2-sys = { git = "https://github.com/alexcrichton/git2-rs.git", rev = "0d745cf0efad95a9e407beecd7b508ca9a37df80" }
log = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
time = "0.1"
toml = "0.2"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
url = "1.0"
