[package]
name = "fusionner"
version = "0.1.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]
license = "Apache-2.0"

[[bin]]
name = "fusionner"
path = "src/main.rs"
test = true
doc = false

[lib]
name = "fusionner"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
docopt = "0.7.0"
fern = "0.3"
git2 = "0.7"
libgit2-sys = "0.7"
log = "0.3"
regex = "0.2"
rustc-serialize = "0.3"
serde = "1.0.0"
serde_derive = "1.0.0"
time = "0.1"
toml = "0.4"

[dev-dependencies]
rand = "0.3"
tempdir = "0.3"
url = "1.0"
